--- a/style.css
+++ b/style.css
@@ -299,7 +299,7 @@ section .title::after{
 .services .title::after,
 .teams .title::after{
     background: #111;
-    content: "What I Provide";
+    content: "Tools & Technologies";
 }
 .services .serv-content .card{
     width: calc(33% - 20px);
